--- a/config/database.yml
+++ b/config/database.yml
@@ -9,7 +9,7 @@ default: &default
 
 development:
   <<: *default
-  database: renalware
+  database: renalware_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
