Rewriting migrations from ground up
Conflicts:
	db/schema.rb
	features/php/support/db.rb

--- a/config/database.yml
+++ b/config/database.yml
@@ -9,7 +9,7 @@ default: &default
 
 php_development:
   <<: *default
-  database: renalware
+  database: renalware_development
 
 php_test:
   <<: *default
