--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,9 @@ capybara-*.html
 
 # Ignore all logfiles and tempfiles.
 /log/*.log
+/php/renalware/log
 /tmp
+php/renalware/tmp
 tmp/php.pid
 
 capybara*.html
