Default Hound config

--- a/.ruby-style.yml
+++ b/.ruby-style.yml
@@ -17,7 +17,7 @@ AllCops:
   - "**/Vagabondfile"
   Exclude:
   - "vendor/**/*"
-  - "db/migrations/*"
+  - "db/migrate/*"
   - "db/schema.rb"
   - "db/structure.sql"
   RunRailsCops: false
