--- a/.ruby-style.yml
+++ b/.ruby-style.yml
@@ -121,8 +121,8 @@ Style/CommentAnnotation:
 Style/DotPosition:
   Description: Checks the position of the dot in multi-line method calls.
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#consistent-multi-line-chains
-  Enabled: false
-  EnforcedStyle: trailing
+  Enabled: true
+  EnforcedStyle: leading
   SupportedStyles:
   - leading
   - trailing
