--- a/.ruby-style.yml
+++ b/.ruby-style.yml
@@ -18,6 +18,7 @@ AllCops:
   Exclude:
   - "vendor/**/*"
   - "db/migrate/*"
+  - "db/seeds/*"
   - "db/schema.rb"
   - "db/structure.sql"
   RunRailsCops: false
