Fixed rebase conflict for permissions.yml

--- a/config/permissions.yml
+++ b/config/permissions.yml
@@ -2,6 +2,7 @@ super_admin:
   - Renalware::Role
 admin:
   - Renalware::User
+  - Renalware::BagType
   - Renalware::Drug
   - Renalware::DrugType
   - Renalware::EdtaCode
