Fix some violations

--- a/.ruby-style.yml
+++ b/.ruby-style.yml
@@ -212,7 +212,7 @@ Style/HashSyntax:
 Style/IfUnlessModifier:
   Description: Favor modifier if/unless usage when you have a single-line body.
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#if-as-a-modifier
-  Enabled: true
+  Enabled: false
   MaxLineLength: 100
 Style/IndentationWidth:
   Description: Use 2 spaces for indentation.
@@ -480,7 +480,7 @@ Style/VariableName:
 Style/WhileUntilModifier:
   Description: Favor modifier while/until usage when you have a single-line body.
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#while-as-a-modifier
-  Enabled: true
+  Enabled: false
   MaxLineLength: 100
 Style/WordArray:
   Description: Use %w or %W for arrays of words.
