See if we can run web scenarios on CircleCI

--- a/circle.yml
+++ b/circle.yml
@@ -2,4 +2,8 @@ dependencies:
   pre:
     - gem install bundler rake
   post:
+    - bundle exec rake cucumber_web:
+      environment:
+        RAILS_ENV: test
+        TEST_DEPTH: web
     - bundle exec bundle-audit update && bundle exec bundle-audit check
