Run cucumber web after rspec

--- a/circle.yml
+++ b/circle.yml
@@ -2,8 +2,11 @@ dependencies:
   pre:
     - gem install bundler rake
   post:
+    - bundle exec bundle-audit update && bundle exec bundle-audit check
+
+test:
+  post:
     - bundle exec rake cucumber:web:
         environment:
           RAILS_ENV: test
           TEST_DEPTH: web
-    - bundle exec bundle-audit update && bundle exec bundle-audit check
