--- a/.ruby-style.yml
+++ b/.ruby-style.yml
@@ -591,6 +591,15 @@ Rails/ScopeArgs:
   Enabled: false
   Include:
   - app/models/**/*.rb
+Rails/TimeZone:
+  EnforcedStyle: flexible
+  SupportedStyles:
+  - strict
+  - flexible
+  Description: Checks the correct usage of time zone aware methods.
+  StyleGuide: https://github.com/bbatsov/rails-style-guide#time
+  Reference: http://danilenko.org/2012/7/6/rails_timezones
+  Enabled: false
 Rails/Validation:
   Description: Use validates :attribute, hash of validations.
   Enabled: false
