--- a/config/permissions.yml
+++ b/config/permissions.yml
@@ -3,8 +3,8 @@ super_admin:
 admin:
   - Renalware::User
   - Renalware::BagType
-  - Renalware::Drug
-  - Renalware::DrugType
+  - Renalware::Drugs::Drug
+  - Renalware::Drugs::Type
   - Renalware::EdtaCode
   - Renalware::EventType
   - Renalware::MedicationRoute
