Ignore @wip features when running rake cucumber:web

--- a/config/cucumber.yml
+++ b/config/cucumber.yml
@@ -3,7 +3,7 @@ env_format = "#{ENV['CUCUMBER_FORMAT']}"
 base_opts = (env_format == "" ? "" : "--format #{env_format}") + " -r features"
 std_opts = "#{base_opts} --tags ~@wip --tags ~@pending --strict"
 wip_opts = "#{base_opts} --tags @wip:100 --wip"
-web_opts = "#{base_opts} --tags @web --tags ~@pending --strict"
+web_opts = "#{base_opts} --tags ~@wip --tags @web --tags ~@pending --strict"
 %>
 default: <%= std_opts %>
 wip: <%= wip_opts %>
