--- a/.ruby-style.yml
+++ b/.ruby-style.yml
@@ -383,7 +383,7 @@ Style/StringLiteralsInInterpolation:
   - double_quotes
 Style/SpaceAroundBlockParameters:
   Description: Checks the spacing inside and after block parameters pipes.
-  Enabled: false
+  Enabled: true
   EnforcedStyleInsidePipes: no_space
   SupportedStyles:
   - space
@@ -408,7 +408,7 @@ Style/SpaceInsideBlockBraces:
   Description: Checks that block braces have or don't have surrounding space. For
     blocks taking parameters, checks that the left brace has or doesn't have trailing
     space.
-  Enabled: false
+  Enabled: true
   EnforcedStyle: space
   SupportedStyles:
   - space
@@ -418,7 +418,7 @@ Style/SpaceInsideBlockBraces:
 Style/SpaceInsideHashLiteralBraces:
   Description: Use spaces inside hash literal braces - or don't.
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#spaces-operators
-  Enabled: false
+  Enabled: true
   EnforcedStyle: space
   EnforcedStyleForEmptyBraces: no_space
   SupportedStyles:
