--- a/config/database.yml
+++ b/config/database.yml
@@ -52,10 +52,6 @@ development:
   # Defaults to warning.
   #min_messages: notice
 
-staging:
-  <<: *default
-  database: renalware_development
-
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
@@ -82,3 +78,6 @@ test:
 #   production:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
+
+staging:
+  url: <%= ENV['DATABASE_URL'] %>
