Allow an admin to manage hospital units

--- a/config/permissions.yml
+++ b/config/permissions.yml
@@ -11,3 +11,4 @@ admin:
   - Renalware::Modality::Description
   - Renalware::OrganismCode
   - Renalware::PRDDescription
+  - Renalware::Hospitals::Unit
