--- a/circle.yml
+++ b/circle.yml
@@ -10,4 +10,4 @@ test:
         environment:
           RAILS_ENV: test
           TEST_DEPTH: web
-    - bundle exec bin/reset_data
+    - DEMO=true bundle exec bin/reset_data
