Try to enforce space around operators

--- a/.ruby-style.yml
+++ b/.ruby-style.yml
@@ -59,4 +59,8 @@ Style/EmptyLineBetweenDefs:
   # need an empty line between them.
   AllowAdjacentOneLineDefs: false
   Enabled: false
-
+Style/SpaceAroundOperators:
+  # When true, allows most uses of extra spacing if the intent is to align
+  # with an operator on the previous or next line, not counting empty lines
+  # or comment lines.
+  AllowForAlignment: true
