Add delayed job to process messages inserted in the jobs table

--- a/app/jobs/example.yml
+++ b/app/jobs/example.yml
@@ -1,4 +1,4 @@
---- !ruby/struct:PathologyFeedJob
+--- !ruby/struct:FeedJob
 raw_message: |
   MSH|^~\&|HM|LBE|SCM||20091112164645||ORU^R01|1258271|P|2.3.1|||AL||||
   PID|||Z999990^^^PAS Number||RABBIT^JESSICA^^^MS||19880924|F|||18 RABBITHOLE ROAD^LONDON^^^SE8 8JR|||||||||||||||||||
