Attempt to fix Circl CI
https://discuss.circleci.com/t/bundler-fails-to-find-appropriate-version-despite-installing-appropriate-version-earlier-in-the-build/2815

--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,7 @@
 dependencies:
   pre:
-    - gem install bundler rake
+    - echo Y | rvm @global do gem uninstall --force bundler
+    - gem install bundler -v '1.10.6'
   post:
     - bundle exec bundle-audit update && bundle exec bundle-audit check
 
