Add missing observation description for pathology

--- a/features/support/fixtures/pathology_observation_descriptions.yml
+++ b/features/support/fixtures/pathology_observation_descriptions.yml
@@ -46,6 +46,10 @@ CK:
   code: "CK"
   name: "CK"
 
+CRCL:
+  code: "CRCL"
+  name: "Creatinine Clearance"
+
 CRE:
   code: "CRE"
   name: "Creatinine"
